--- a/readme.html
+++ b/readme.html
@@ -1,1 +1,84 @@
-Este es un proyecto de prueba
+Welcome, User!!
+
+This is a project for Etraining. It is part of their technical test.
+
+By: David Barbosa
+
+Steps to install the ecommerce-plugin project
+
+Prerequisites:
+1. Xampp or Wampp
+2. PHP >= 8.0
+
+The installation
+For the installation of the project it is necessary to have a MySQL database management system, the Apache web server and the interpreters for PHP script languages.
+We will be using Xampp or Wampp for this and we also need to have the latest version of PHP to be able to run the version of Wordpress we are developing in.
+
+Let us begin:
+
+1. Activate your Xampp or Wampp to activate your MySQL database management system, also activate the Apache server.
+
+2. Unzip the Wordpress ZIP file (the file contains 1 SQL file and a README file which you will read now to continue with the installation) It is very important that you unzip this file into the htdocs folder of your Xampp or Wampp, if not the project may not work correctly, to know where the "htdocs" folder is enter the file explorer, go to the "This computer" area, now enter the Xampp or Wampp folder and then enter the "htdocs" folder.
+Here is an example of what the folder path looks like:
+C:\xampp htdocs.
+
+3. Once the ZIP file has been unzipped, go to: http://localhost/phpmyadmin/
+Remember that you must have already activated your Xampp or Wampp to access this route from your web browser.
+
+4. Create a database in your MySQL environment with the name "ecommerce", make sure you get a utf8mb64_general_ci collation; once the database is created click on it and go to the top, you will see the import option, there select the import option and select the SQL file you downloaded.
+
+5. Once the database has been imported, click continue until the installation is complete, now open a new window and type in "http://localhost/wordpress/" IF this is your first time using Wordpress, you should follow the installation tutorial provided by Wordpress.
+Once you are done with this process go to the plugins section and you will see the ecommerce plugin.
+
+6. If you want to see the functionality of the plugin, simply copy in the top bar of the file explorer and type "C:\xampp\htdocs\wordpress\wp-content\plugins\ecommerce".
+To view the files in a more user-friendly way, I suggest you open them with VSCode, Notpad ++ or Sublime Text. 
+
+
+========== ESPAÑOL ===================
+
+Bienvenido, ¡¡ USuario !!
+
+Este es un proyecto para Etraining. Forma parte de su prueba técnica.
+
+Por: David Barbosa
+
+Pasos para instalar el proyecto ecommerce-plugin
+
+Requisitos previos:
+
+1. Xampp o Wampp
+
+2. PHP >= 8.0
+
+La instalación
+
+Para la instalación del proyecto es necesario disponer de un sistema gestor de bases de datos MySQL, el servidor web Apache y los intérpretes para lenguajes de script PHP.
+
+Para ello utilizaremos Xampp o Wampp y también necesitamos tener la última versión de PHP para poder ejecutar la versión de Wordpress en la que estamos desarrollando.
+
+Comencemos:
+
+
+1. Activa tu Xampp o Wampp para activar tu sistema gestor de base de datos MySQL, activa también el servidor Apache.
+
+
+2. Descomprime el archivo ZIP de Wordpress (el archivo contiene 1 archivo SQL y un archivo README que leerás ahora para continuar con la instalación) Es muy importante que descomprimas este archivo en la carpeta htdocs de tu Xampp o Wampp, si no el proyecto puede no funcionar correctamente, para saber donde está la carpeta "htdocs" entra en el explorador de archivos, ve a la zona "Este equipo", ahora entra en la carpeta Xampp o Wampp y luego entra en la carpeta "htdocs".
+
+He aquí un ejemplo de cómo se ve la ruta de la carpeta:
+
+C:\xampp htdocs.
+
+
+3. Una vez descomprimido el archivo ZIP, accede a: http://localhost/phpmyadmin/
+Recuerda que ya debes tener activado tu Xampp o Wampp para acceder a esta ruta desde tu navegador web.
+
+
+4. Cree una base de datos en su entorno MySQL con el nombre "ecommerce", asegúrese de obtener una colación utf8mb64_general_ci; una vez creada la base de datos haga clic sobre ella y diríjase a la parte superior, verá la opción importar, ahí seleccione la opción.
+
+
+5. Una vez que la base de datos ha sido importada, haga clic en continuar hasta que la instalación se haya completado, ahora abra una nueva ventana y escriba "http://localhost/wordpress/" SI es la primera vez que utiliza Wordpress, debe seguir el tutorial de instalación proporcionado por Wordpress.
+Una vez que hayas terminado con este proceso ve a la sección de plugins y verás el plugin de ecommerce.
+
+
+6. Si quieres ver la funcionalidad del plugin, simplemente copia en la barra superior del explorador de archivos y escribe "C:\xampp\htdocs\wordpress\wp-content\plugins\ecommerce".
+Para ver los archivos de una manera más fácil de usar, le sugiero que los abra con VSCode, Notpad ++ o Sublime Text. 
